[tool.poetry]
name = "the-worst-queue"
version = "0.0.1.dev0"
description = "A simple jobs queue built with \"worse is better\" in mind."
authors = ["weihong.xu <xuweihong.cn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "the_worst_queue"}]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.115.14"
pydantic = "^2.11.7"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
